UI Improvements and some fixes in the Concepts page.

--- a/TFG_Projects_APP_Frontend/Components/ConceptComponents/ContainerComponent.xaml
+++ b/TFG_Projects_APP_Frontend/Components/ConceptComponents/ContainerComponent.xaml
@@ -4,7 +4,10 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:components="clr-namespace:TFG_Projects_APP_Frontend.Components.ConceptComponents">
-    <VerticalStackLayout Background="BlanchedAlmond" HorizontalOptions="Center">
+    <VerticalStackLayout
+        Background="BlanchedAlmond"
+        HorizontalOptions="Center"
+        MaximumHeightRequest="500">
         <Label
             Padding="10"
             FontAttributes="Bold"
@@ -14,6 +17,8 @@
             MinimumWidthRequest="100"
             Text="{Binding Component.Title}"
             VerticalOptions="Center" />
-        <StackLayout x:Name="ChildrenContainer" Padding="10" />
+        <ScrollView>
+            <StackLayout x:Name="ChildrenContainer" Padding="10" />
+        </ScrollView>
     </VerticalStackLayout>
 </ContentView>
