--- a/TFG_Projects_APP_Frontend/Resources/Styles/Colors.xaml
+++ b/TFG_Projects_APP_Frontend/Resources/Styles/Colors.xaml
@@ -1,10 +1,8 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
 <?xaml-comp compile="true" ?>
-<ResourceDictionary 
-    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+<ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
-    <!-- Note: For Android please see also Platforms\Android\Resources\values\colors.xml -->
+    <!--  Note: For Android please see also Platforms\Android\Resources\values\colors.xml  -->
 
     <Color x:Key="Primary">#512BD4</Color>
     <Color x:Key="PrimaryDark">#ac99ea</Color>
@@ -28,18 +26,39 @@
     <Color x:Key="Gray900">#212121</Color>
     <Color x:Key="Gray950">#141414</Color>
 
-    <SolidColorBrush x:Key="PrimaryBrush" Color="{StaticResource Primary}"/>
-    <SolidColorBrush x:Key="SecondaryBrush" Color="{StaticResource Secondary}"/>
-    <SolidColorBrush x:Key="TertiaryBrush" Color="{StaticResource Tertiary}"/>
-    <SolidColorBrush x:Key="WhiteBrush" Color="{StaticResource White}"/>
-    <SolidColorBrush x:Key="BlackBrush" Color="{StaticResource Black}"/>
+    <Color x:Key="Delete">#F44336</Color>
+    <Color x:Key="Save">#2196F3</Color>
+    <Color x:Key="Create">#4CAF50</Color>
+    <Color x:Key="Edit">#03A9F4</Color>
+    <Color x:Key="Misc">#673AB7</Color>
+    <Color x:Key="Controls">#2196F3</Color>
+    <Color x:Key="ActivityIndicator">#757575</Color>
+    <Color x:Key="ProgressBarTrack">#E0E0E0</Color>
+    <Color x:Key="ProgressBarColor">#2196F3</Color>
+    <Color x:Key="Transparent">Transparent</Color>
 
-    <SolidColorBrush x:Key="Gray100Brush" Color="{StaticResource Gray100}"/>
-    <SolidColorBrush x:Key="Gray200Brush" Color="{StaticResource Gray200}"/>
-    <SolidColorBrush x:Key="Gray300Brush" Color="{StaticResource Gray300}"/>
-    <SolidColorBrush x:Key="Gray400Brush" Color="{StaticResource Gray400}"/>
-    <SolidColorBrush x:Key="Gray500Brush" Color="{StaticResource Gray500}"/>
-    <SolidColorBrush x:Key="Gray600Brush" Color="{StaticResource Gray600}"/>
-    <SolidColorBrush x:Key="Gray900Brush" Color="{StaticResource Gray900}"/>
-    <SolidColorBrush x:Key="Gray950Brush" Color="{StaticResource Gray950}"/>
+    <SolidColorBrush x:Key="PrimaryBrush" Color="{StaticResource Primary}" />
+    <SolidColorBrush x:Key="SecondaryBrush" Color="{StaticResource Secondary}" />
+    <SolidColorBrush x:Key="TertiaryBrush" Color="{StaticResource Tertiary}" />
+    <SolidColorBrush x:Key="WhiteBrush" Color="{StaticResource White}" />
+    <SolidColorBrush x:Key="BlackBrush" Color="{StaticResource Black}" />
+
+    <SolidColorBrush x:Key="Gray100Brush" Color="{StaticResource Gray100}" />
+    <SolidColorBrush x:Key="Gray200Brush" Color="{StaticResource Gray200}" />
+    <SolidColorBrush x:Key="Gray300Brush" Color="{StaticResource Gray300}" />
+    <SolidColorBrush x:Key="Gray400Brush" Color="{StaticResource Gray400}" />
+    <SolidColorBrush x:Key="Gray500Brush" Color="{StaticResource Gray500}" />
+    <SolidColorBrush x:Key="Gray600Brush" Color="{StaticResource Gray600}" />
+    <SolidColorBrush x:Key="Gray900Brush" Color="{StaticResource Gray900}" />
+    <SolidColorBrush x:Key="Gray950Brush" Color="{StaticResource Gray950}" />
+
+    <SolidColorBrush x:Key="DeleteBrush" Color="{StaticResource Delete}" />
+    <SolidColorBrush x:Key="SaveBrush" Color="{StaticResource Save}" />
+    <SolidColorBrush x:Key="CreateBrush" Color="{StaticResource Create}" />
+    <SolidColorBrush x:Key="EditBrush" Color="{StaticResource Edit}" />
+    <SolidColorBrush x:Key="MiscBrush" Color="{StaticResource Misc}" />
+    <SolidColorBrush x:Key="ControlsBrush" Color="{StaticResource Controls}" />
+    <SolidColorBrush x:Key="ActivityIndicatorBrush" Color="{StaticResource ActivityIndicator}" />
+    <SolidColorBrush x:Key="ProgressBarTrackBrush" Color="{StaticResource ProgressBarTrack}" />
+    <SolidColorBrush x:Key="TransparentBrush" Color="{StaticResource Transparent}" />
 </ResourceDictionary>
