--- a/TFG_Projects_APP_Frontend/Components/TaskComponents/ProgressSectionComponent.xaml
+++ b/TFG_Projects_APP_Frontend/Components/TaskComponents/ProgressSectionComponent.xaml
@@ -17,20 +17,31 @@
                 Grid.Row="0"
                 Orientation="Horizontal"
                 Spacing="5">
-                <Button Clicked="Left_Clicked" Text="&lt;" />
+                <Button
+                    BackgroundColor="{DynamicResource Transparent}"
+                    Clicked="Left_Clicked"
+                    Text="&lt;"
+                    TextColor="{StaticResource Gray500}" />
                 <Label Text="{Binding Title}" />
-                <Button Clicked="Right_Clicked" Text="&gt;" />
+                <Button
+                    BackgroundColor="{DynamicResource Transparent}"
+                    Clicked="Right_Clicked"
+                    Text="&gt;"
+                    TextColor="{StaticResource Gray500}" />
             </StackLayout>
             <Button
                 Grid.Row="1"
+                BackgroundColor="{DynamicResource Edit}"
                 Clicked="Edit_Clicked"
                 Text="Edit" />
             <Button
                 Grid.Row="2"
+                BackgroundColor="{DynamicResource Delete}"
                 Clicked="Delete_Clicked"
                 Text="Delete" />
             <Button
                 Grid.Row="3"
+                BackgroundColor="{DynamicResource Create}"
                 Clicked="Create_Task_Clicked"
                 Text="Create Task" />
             <Border
@@ -51,7 +62,7 @@
                     Padding="10"
                     BackgroundColor="Transparent"
                     IsClippedToBounds="True"
-                    Spacing="10" />
+                    Spacing="10"/>
             </ScrollView>
         </Grid>
     </Border>
