--- a/TFG_Projects_APP_Frontend/Pages/Tasks/TaskBoardPage.xaml
+++ b/TFG_Projects_APP_Frontend/Pages/Tasks/TaskBoardPage.xaml
@@ -27,6 +27,7 @@
 
         <StackLayout Grid.Row="0" Orientation="Horizontal">
             <Button
+                BackgroundColor="{DynamicResource Create}"
                 Command="{Binding CreateTaskSectionCommand}"
                 HeightRequest="40"
                 HorizontalOptions="Start"
@@ -39,49 +40,60 @@
                 IsRunning="{Binding IsLoading}"
                 IsVisible="{Binding IsLoading}"
                 VerticalOptions="Center"
-                WidthRequest="50" />
+                WidthRequest="50"
+                Color="{DynamicResource ActivityIndicator}" />
         </StackLayout>
         <StackLayout
             Grid.Row="1"
             Padding="5"
-            HorizontalOptions="StartAndExpand"
             Orientation="Horizontal"
             Spacing="20">
-            <CollectionView
-                ItemsSource="{Binding TaskSections}"
-                SelectedItem="{Binding SelectedTaskSection}"
-                SelectionChangedCommand="{Binding TaskSectionSelectedCommand}"
-                SelectionMode="Single">
-                <CollectionView.ItemsLayout>
-                    <GridItemsLayout Orientation="Horizontal" Span="1" />
-                </CollectionView.ItemsLayout>
-                <CollectionView.ItemTemplate>
-                    <DataTemplate x:DataType="models:TaskSection">
-                        <components:TaskSectionComponent
-                            BindingContext="{Binding .}"
-                            ChildDeleteCommand="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=DeleteTaskCommand}"
-                            ChildTapCommand="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=EditTaskCommand}"
-                            CreateTaskCommand="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=TaskCreateCommand}"
-                            DeleteCommand="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=DeleteTaskSectionCommand}"
-                            DroppedOnSectionCommand="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=DropOnSectionCommand}"
-                            DroppedOnTaskCommand="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=DroppedOnTaskCommand}"
-                            EditCommand="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=EditTaskSectionCommand}"
-                            MoveLeftCommand="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=MoveSectionLeftCommand}"
-                            MoveRightCommand="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=MoveSectionRightCommand}"
-                            TaskGrabbedCommand="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=GrabTaskCommand}" />
-                    </DataTemplate>
-                </CollectionView.ItemTemplate>
-            </CollectionView>
+            <ScrollView Orientation="Horizontal">
+                <CollectionView
+                    HorizontalOptions="StartAndExpand"
+                    ItemsSource="{Binding TaskSections}"
+                    SelectedItem="{Binding SelectedTaskSection}"
+                    SelectionChangedCommand="{Binding TaskSectionSelectedCommand}"
+                    SelectionMode="Single">
+                    <CollectionView.ItemsLayout>
+                        <GridItemsLayout Orientation="Horizontal" Span="1" />
+                    </CollectionView.ItemsLayout>
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate x:DataType="models:TaskSection">
+                            <components:TaskSectionComponent
+                                BindingContext="{Binding .}"
+                                ChildDeleteCommand="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=DeleteTaskCommand}"
+                                ChildTapCommand="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=EditTaskCommand}"
+                                CreateTaskCommand="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=TaskCreateCommand}"
+                                DeleteCommand="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=DeleteTaskSectionCommand}"
+                                DroppedOnSectionCommand="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=DropOnSectionCommand}"
+                                DroppedOnTaskCommand="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=DroppedOnTaskCommand}"
+                                EditCommand="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=EditTaskSectionCommand}"
+                                MoveLeftCommand="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=MoveSectionLeftCommand}"
+                                MoveRightCommand="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=MoveSectionRightCommand}"
+                                TaskGrabbedCommand="{Binding Source={RelativeSource AncestorType={x:Type pageModels:Tasks.TaskBoardPageModel}}, Path=GrabTaskCommand}" />
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+            </ScrollView>
+
 
             <VerticalStackLayout IsVisible="{Binding IsEditingTaskSection}" Spacing="5">
                 <StackLayout Orientation="Horizontal" Spacing="5">
                     <Label FontSize="30" Text="{x:Static properties:Resources.EditTaskSectionLabel}" />
-                    <Button Command="{Binding CloseEditingtTaskSectionCommand}" Text="X" />
+                    <Button
+                        BackgroundColor="{DynamicResource Transparent}"
+                        Command="{Binding CloseEditingtTaskSectionCommand}"
+                        Text="X"
+                        TextColor="{StaticResource Gray500}" />
                 </StackLayout>
 
                 <Label FontSize="20" Text="{x:Static properties:Resources.TitleLabel}" />
                 <Entry Placeholder="{x:Static properties:Resources.TitleText}" Text="{Binding EditingTaskSectionData.Title}" />
-                <Button Command="{Binding SaveTaskSectionChangesCommand}" Text="{x:Static properties:Resources.SaveButton}" />
+                <Button
+                    BackgroundColor="{DynamicResource Save}"
+                    Command="{Binding SaveTaskSectionChangesCommand}"
+                    Text="{x:Static properties:Resources.SaveButton}" />
             </VerticalStackLayout>
 
             <Grid IsVisible="{Binding IsEditingTask}" VerticalOptions="FillAndExpand">
@@ -94,7 +106,11 @@
                     Orientation="Horizontal"
                     Spacing="5">
                     <Label FontSize="30" Text="{x:Static properties:Resources.EditTaskLabel}" />
-                    <Button Command="{Binding CloseEditingtTaskCommand}" Text="X" />
+                    <Button
+                        BackgroundColor="{DynamicResource Transparent}"
+                        Command="{Binding CloseEditingtTaskCommand}"
+                        Text="X"
+                        TextColor="{StaticResource Gray500}" />
                 </StackLayout>
                 <ScrollView Grid.Row="1" VerticalOptions="FillAndExpand">
                     <VerticalStackLayout Padding="10" Spacing="5">
@@ -111,8 +127,11 @@
                         </HorizontalStackLayout>
 
                         <Slider
+                            BackgroundColor="{DynamicResource ProgressBarTrack}"
                             Maximum="100"
                             Minimum="0"
+                            MinimumTrackColor="{DynamicResource ProgressBarColor}"
+                            ThumbColor="{DynamicResource Controls}"
                             Value="{Binding ProgressValue}" />
                         <Label FontSize="20" Text="{x:Static properties:Resources.LimitDateLabel}" />
                         <DatePicker Date="{Binding EditingTaskData.LimitDate}" Format="dd/MM/yyyy" />
@@ -134,7 +153,10 @@
                                 ItemDisplayBinding="{Binding Title}"
                                 ItemsSource="{Binding PossibleDependencies}"
                                 SelectedItem="{Binding DependencyTaskSelected}" />
-                            <Button Command="{Binding AddDependencyCommand}" Text="{x:Static properties:Resources.AddButton}" />
+                            <Button
+                                BackgroundColor="{DynamicResource Save}"
+                                Command="{Binding AddDependencyCommand}"
+                                Text="{x:Static properties:Resources.AddButton}" />
                         </StackLayout>
 
 
@@ -159,15 +181,21 @@
                                 <Label Text="{Binding UnlockAtValue, StringFormat='{0:F0}'}" />
                             </HorizontalStackLayout>
                             <Slider
+                                BackgroundColor="{DynamicResource ProgressBarTrack}"
                                 Maximum="100"
                                 Minimum="0"
+                                MinimumTrackColor="{DynamicResource ProgressBarColor}"
+                                ThumbColor="{DynamicResource Controls}"
                                 Value="{Binding UnlockAtValue}" />
                             <Button Command="{Binding SaveTaskDependencyChangesCommand}" Text="{x:Static properties:Resources.SaveDependencyChangesButton}" />
                             <Button Command="{Binding RemoveDependencyCommand}" Text="{x:Static properties:Resources.RemoveDependencyButton}" />
                         </VerticalStackLayout>
 
 
-                        <Button Command="{Binding SaveTaskChangesCommand}" Text="{x:Static properties:Resources.SaveButton}" />
+                        <Button
+                            BackgroundColor="{DynamicResource Save}"
+                            Command="{Binding SaveTaskChangesCommand}"
+                            Text="{x:Static properties:Resources.SaveButton}" />
                     </VerticalStackLayout>
                 </ScrollView>
             </Grid>
